# SpMv

./: CMakeLists.txt  readme.md
src/: executor.h  main.cpp
src/comm/: neighbourBatch.cpp  neighbourBatch.h
src/compute/: spmv_cpu.cpp  spmv_cpu.h
src/core/: csr_matrix.h
src/io/: mtx_reader.h
tests/: sample1.mtx
